NetBSD Problem Report #36223

From milosn@milosn.no-ip.org  Thu Apr 26 08:34:47 2007
Return-Path: <milosn@milosn.no-ip.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 2320F63B960
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 26 Apr 2007 08:34:47 +0000 (UTC)
Message-Id: <20070426072823.C83318203@piccolo.milosn.no-ip.org>
Date: Thu, 26 Apr 2007 08:28:23 +0100 (BST)
From: milos.negovanovic@googlemail.com
Reply-To: milos.negovanovic@googlemail.com
To: gnats-bugs@NetBSD.org
Subject: fdisk doesn't honour -f flag in all cases
X-Send-Pr-Version: 3.95

>Number:         36223
>Category:       bin
>Synopsis:       When running fdisk in non interactive mode it still performs checks
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Apr 26 08:35:00 +0000 2007
>Closed-Date:    Wed Jan 23 00:06:16 +0000 2008
>Last-Modified:  Sat May 30 06:40:02 +0000 2009
>Originator:     Milos Negovanovic
>Release:        NetBSD 4.0_BETA2
>Organization:
>Environment:
System: NetBSD piccolo 4.0_BETA2 NetBSD 4.0_BETA2 (piccolo4) #0: Fri Feb 9 07:48:59 GMT 2007 milosn@piccolo:/home/stuff/build/netbsd/4/obj/sys/arch/i386/compile/piccolo4 i386
Architecture: i386
Machine: i386
>Description:
>How-To-Repeat:
I guess by running fdisk with -f flag on previosly dd-ed disk device.
>Fix:
None ATM.

>Release-Note:

>Audit-Trail:
From: Milos Negovanovic <milos.negovanovic@googlemail.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/36223
Date: Thu, 26 Apr 2007 10:14:59 +0100

 --lrZ03NoBR/3+SXJZ
 Content-Type: text/plain; charset=us-ascii
 Content-Disposition: inline

 hmm thanks to Nikolay Kalev ... patch :)

 *******************************************************************************
 diff -ruN sbin.old/fdisk.c sbin.new/fdisk.c
 --- sbin.old/fdisk.c    Sun Mar 11 11:02:47 2007
 +++ sbin.new/fdisk.c    Thu Apr 26 16:31:20 2007
 @@ -2066,8 +2066,10 @@
                  * somewhere to safely write the menu tag.
                  */
                 if (boot->mbr_bootsel_magic != LE_MBR_BS_MAGIC) {
 +                   if (!f_flag) {
                         if (yesno("The bootselect code is not installed, "
                                             "do you want to install it now?"))
 +                   }           
                                 install_bootsel(MBR_BS_ACTIVE);
                 }
                 if (boot->mbr_bootsel_magic == LE_MBR_BS_MAGIC) {

 *******************************************************************************

 ... attached as well.

 Regards
 Milos

 --lrZ03NoBR/3+SXJZ
 Content-Type: text/plain; charset=us-ascii
 Content-Disposition: attachment; filename="fdisk.diff"

 diff -ruN sbin.old/fdisk.c sbin.new/fdisk.c
 --- sbin.old/fdisk.c	Sun Mar 11 11:02:47 2007
 +++ sbin.new/fdisk.c	Thu Apr 26 16:31:20 2007
 @@ -2066,8 +2066,10 @@
  		 * somewhere to safely write the menu tag.
  		 */
  		if (boot->mbr_bootsel_magic != LE_MBR_BS_MAGIC) {
 +		    if (!f_flag) {
  			if (yesno("The bootselect code is not installed, "
  					    "do you want to install it now?"))
 +		    }
  				install_bootsel(MBR_BS_ACTIVE);
  		}
  		if (boot->mbr_bootsel_magic == LE_MBR_BS_MAGIC) {

 --lrZ03NoBR/3+SXJZ--

From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: PR/36223 CVS commit: src/sbin/fdisk
Date: Thu, 26 Apr 2007 18:51:07 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Thu Apr 26 18:51:02 UTC 2007

 Modified Files:
 	src/sbin/fdisk: fdisk.c

 Log Message:
 PR/36223: Milos Negovanovic: Don't ask if we want to install mbr_bootselect
 with -f.


 To generate a diff of this commit:
 cvs rdiff -r1.103 -r1.104 src/sbin/fdisk/fdisk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: PR/36223 CVS commit: [netbsd-4] src/sbin/fdisk
Date: Sat, 28 Apr 2007 18:15:28 +0000 (UTC)

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Apr 28 18:15:27 UTC 2007

 Modified Files:
 	src/sbin/fdisk [netbsd-4]: fdisk.c

 Log Message:
 Pull up following revision(s) (requested by christos in ticket #593):
 	sbin/fdisk/fdisk.c: revision 1.104
 PR/36223: Milos Negovanovic: Don't ask if we want to install mbr_bootselect
 with -f.


 To generate a diff of this commit:
 cvs rdiff -r1.102.2.1 -r1.102.2.2 src/sbin/fdisk/fdisk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@narn.netbsd.org
State-Changed-When: Wed, 23 Jan 2008 00:06:16 +0000
State-Changed-Why:
fixed and pulled up last april


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/36223 CVS commit: [netbsd-3] src/sbin/fdisk
Date: Sat, 30 May 2009 06:37:13 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat May 30 06:37:13 UTC 2009

 Modified Files:
 	src/sbin/fdisk [netbsd-3]: fdisk.c

 Log Message:
 Pull up following revision(s) (requested by jnemeth in ticket #2018):
 	sbin/fdisk/fdisk.c: revision 1.104
 PR/36223: Milos Negovanovic: Don't ask if we want to install mbr_bootselect
 with -f.


 To generate a diff of this commit:
 cvs rdiff -u -r1.88.2.1 -r1.88.2.2 src/sbin/fdisk/fdisk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:
 for the presence of MBR and ocasionaly it asks for one to be installed if not
 present. Is this a feature or a "logical" bug?
 for the presence of MBR and ocasionaly it asks for one to be installed if not
 present. Is this a feature or a "logical" bug?

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.