PR/36223: Milos Negovanovic: Don't ask if we want to install mbr_bootselect with -f.